Projects/ASL/Codes/TestPlanDescription/consChecker_ISI_V3/parser/eeYacc.output
Terminals unused in grammar

   STMT
   ERROR
   '?'
   UMINUS


State 56 conflicts: 1 shift/reduce
State 57 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program VarDeclStmt
    2        | VarDeclStmt
    3        | program asStmt
    4        | asStmt
    5        | program chkStmt
    6        | chkStmt

    7 $@1: %empty

    8 VarDeclStmt: KWD $@1 idlist ';'

    9 asStmt: expr ';'

   10 chkStmt: CHK checklist ';'

   11 expr: expr '+' expr
   12     | expr '-' expr
   13     | expr '*' expr
   14     | expr '/' expr
   15     | expr AND expr
   16     | expr OR expr
   17     | expr LE expr
   18     | expr '<' expr
   19     | expr GE expr
   20     | expr '>' expr
   21     | expr '=' expr
   22     | expr EQ expr
   23     | expr NE expr
   24     | NOT expr
   25     | '(' expr ')'
   26     | BOOLVALUE
   27     | NUMBER
   28     | ID

   29 idlist: idlist ',' idlist
   30       | ID

   31 checklist: checklist ',' checklist
   32          | ID


Terminals, with rules where they appear

$end (0) 0
'(' (40) 25
')' (41) 25
'*' (42) 13
'+' (43) 11
',' (44) 29 31
'-' (45) 12
'/' (47) 14
';' (59) 8 9 10
'<' (60) 18
'=' (61) 21
'>' (62) 20
'?' (63)
error (256)
ID (258) 28 30 32
KWD (259) 8
CHK (260) 10
STMT (261)
NUMBER (262) 27
BOOLVALUE (263) 26
ERROR (264)
AND (265) 15
OR (266) 16
LE (267) 17
GE (268) 19
NOT (269) 24
EQ (270) 22
NE (271) 23
UMINUS (272)


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
program (31)
    on left: 1 2 3 4 5 6, on right: 0 1 3 5
VarDeclStmt (32)
    on left: 8, on right: 1 2
$@1 (33)
    on left: 7, on right: 8
asStmt (34)
    on left: 9, on right: 3 4
chkStmt (35)
    on left: 10, on right: 5 6
expr (36)
    on left: 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28,
    on right: 9 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25
idlist (37)
    on left: 29 30, on right: 8 29
checklist (38)
    on left: 31 32, on right: 10 31


State 0

    0 $accept: . program $end

    ID         shift, and go to state 1
    KWD        shift, and go to state 2
    CHK        shift, and go to state 3
    NUMBER     shift, and go to state 4
    BOOLVALUE  shift, and go to state 5
    NOT        shift, and go to state 6
    '('        shift, and go to state 7

    program      go to state 8
    VarDeclStmt  go to state 9
    asStmt       go to state 10
    chkStmt      go to state 11
    expr         go to state 12


State 1

   28 expr: ID .

    $default  reduce using rule 28 (expr)


State 2

    8 VarDeclStmt: KWD . $@1 idlist ';'

    $default  reduce using rule 7 ($@1)

    $@1  go to state 13


State 3

   10 chkStmt: CHK . checklist ';'

    ID  shift, and go to state 14

    checklist  go to state 15


State 4

   27 expr: NUMBER .

    $default  reduce using rule 27 (expr)


State 5

   26 expr: BOOLVALUE .

    $default  reduce using rule 26 (expr)


State 6

   24 expr: NOT . expr

    ID         shift, and go to state 1
    NUMBER     shift, and go to state 4
    BOOLVALUE  shift, and go to state 5
    NOT        shift, and go to state 6
    '('        shift, and go to state 7

    expr  go to state 16


State 7

   25 expr: '(' . expr ')'

    ID         shift, and go to state 1
    NUMBER     shift, and go to state 4
    BOOLVALUE  shift, and go to state 5
    NOT        shift, and go to state 6
    '('        shift, and go to state 7

    expr  go to state 17


State 8

    0 $accept: program . $end
    1 program: program . VarDeclStmt
    3        | program . asStmt
    5        | program . chkStmt

    $end       shift, and go to state 18
    ID         shift, and go to state 1
    KWD        shift, and go to state 2
    CHK        shift, and go to state 3
    NUMBER     shift, and go to state 4
    BOOLVALUE  shift, and go to state 5
    NOT        shift, and go to state 6
    '('        shift, and go to state 7

    VarDeclStmt  go to state 19
    asStmt       go to state 20
    chkStmt      go to state 21
    expr         go to state 12


State 9

    2 program: VarDeclStmt .

    $default  reduce using rule 2 (program)


State 10

    4 program: asStmt .

    $default  reduce using rule 4 (program)


State 11

    6 program: chkStmt .

    $default  reduce using rule 6 (program)


State 12

    9 asStmt: expr . ';'
   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr
   15     | expr . AND expr
   16     | expr . OR expr
   17     | expr . LE expr
   18     | expr . '<' expr
   19     | expr . GE expr
   20     | expr . '>' expr
   21     | expr . '=' expr
   22     | expr . EQ expr
   23     | expr . NE expr

    AND  shift, and go to state 22
    OR   shift, and go to state 23
    LE   shift, and go to state 24
    GE   shift, and go to state 25
    '<'  shift, and go to state 26
    '>'  shift, and go to state 27
    '='  shift, and go to state 28
    EQ   shift, and go to state 29
    NE   shift, and go to state 30
    '-'  shift, and go to state 31
    '+'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34
    ';'  shift, and go to state 35


State 13

    8 VarDeclStmt: KWD $@1 . idlist ';'

    ID  shift, and go to state 36

    idlist  go to state 37


State 14

   32 checklist: ID .

    $default  reduce using rule 32 (checklist)


State 15

   10 chkStmt: CHK checklist . ';'
   31 checklist: checklist . ',' checklist

    ';'  shift, and go to state 38
    ','  shift, and go to state 39


State 16

   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr
   15     | expr . AND expr
   16     | expr . OR expr
   17     | expr . LE expr
   18     | expr . '<' expr
   19     | expr . GE expr
   20     | expr . '>' expr
   21     | expr . '=' expr
   22     | expr . EQ expr
   23     | expr . NE expr
   24     | NOT expr .

    EQ   shift, and go to state 29
    NE   shift, and go to state 30
    '-'  shift, and go to state 31
    '+'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 24 (expr)


State 17

   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr
   15     | expr . AND expr
   16     | expr . OR expr
   17     | expr . LE expr
   18     | expr . '<' expr
   19     | expr . GE expr
   20     | expr . '>' expr
   21     | expr . '=' expr
   22     | expr . EQ expr
   23     | expr . NE expr
   25     | '(' expr . ')'

    AND  shift, and go to state 22
    OR   shift, and go to state 23
    LE   shift, and go to state 24
    GE   shift, and go to state 25
    '<'  shift, and go to state 26
    '>'  shift, and go to state 27
    '='  shift, and go to state 28
    EQ   shift, and go to state 29
    NE   shift, and go to state 30
    '-'  shift, and go to state 31
    '+'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34
    ')'  shift, and go to state 40


State 18

    0 $accept: program $end .

    $default  accept


State 19

    1 program: program VarDeclStmt .

    $default  reduce using rule 1 (program)


State 20

    3 program: program asStmt .

    $default  reduce using rule 3 (program)


State 21

    5 program: program chkStmt .

    $default  reduce using rule 5 (program)


State 22

   15 expr: expr AND . expr

    ID         shift, and go to state 1
    NUMBER     shift, and go to state 4
    BOOLVALUE  shift, and go to state 5
    NOT        shift, and go to state 6
    '('        shift, and go to state 7

    expr  go to state 41


State 23

   16 expr: expr OR . expr

    ID         shift, and go to state 1
    NUMBER     shift, and go to state 4
    BOOLVALUE  shift, and go to state 5
    NOT        shift, and go to state 6
    '('        shift, and go to state 7

    expr  go to state 42


State 24

   17 expr: expr LE . expr

    ID         shift, and go to state 1
    NUMBER     shift, and go to state 4
    BOOLVALUE  shift, and go to state 5
    NOT        shift, and go to state 6
    '('        shift, and go to state 7

    expr  go to state 43


State 25

   19 expr: expr GE . expr

    ID         shift, and go to state 1
    NUMBER     shift, and go to state 4
    BOOLVALUE  shift, and go to state 5
    NOT        shift, and go to state 6
    '('        shift, and go to state 7

    expr  go to state 44


State 26

   18 expr: expr '<' . expr

    ID         shift, and go to state 1
    NUMBER     shift, and go to state 4
    BOOLVALUE  shift, and go to state 5
    NOT        shift, and go to state 6
    '('        shift, and go to state 7

    expr  go to state 45


State 27

   20 expr: expr '>' . expr

    ID         shift, and go to state 1
    NUMBER     shift, and go to state 4
    BOOLVALUE  shift, and go to state 5
    NOT        shift, and go to state 6
    '('        shift, and go to state 7

    expr  go to state 46


State 28

   21 expr: expr '=' . expr

    ID         shift, and go to state 1
    NUMBER     shift, and go to state 4
    BOOLVALUE  shift, and go to state 5
    NOT        shift, and go to state 6
    '('        shift, and go to state 7

    expr  go to state 47


State 29

   22 expr: expr EQ . expr

    ID         shift, and go to state 1
    NUMBER     shift, and go to state 4
    BOOLVALUE  shift, and go to state 5
    NOT        shift, and go to state 6
    '('        shift, and go to state 7

    expr  go to state 48


State 30

   23 expr: expr NE . expr

    ID         shift, and go to state 1
    NUMBER     shift, and go to state 4
    BOOLVALUE  shift, and go to state 5
    NOT        shift, and go to state 6
    '('        shift, and go to state 7

    expr  go to state 49


State 31

   12 expr: expr '-' . expr

    ID         shift, and go to state 1
    NUMBER     shift, and go to state 4
    BOOLVALUE  shift, and go to state 5
    NOT        shift, and go to state 6
    '('        shift, and go to state 7

    expr  go to state 50


State 32

   11 expr: expr '+' . expr

    ID         shift, and go to state 1
    NUMBER     shift, and go to state 4
    BOOLVALUE  shift, and go to state 5
    NOT        shift, and go to state 6
    '('        shift, and go to state 7

    expr  go to state 51


State 33

   13 expr: expr '*' . expr

    ID         shift, and go to state 1
    NUMBER     shift, and go to state 4
    BOOLVALUE  shift, and go to state 5
    NOT        shift, and go to state 6
    '('        shift, and go to state 7

    expr  go to state 52


State 34

   14 expr: expr '/' . expr

    ID         shift, and go to state 1
    NUMBER     shift, and go to state 4
    BOOLVALUE  shift, and go to state 5
    NOT        shift, and go to state 6
    '('        shift, and go to state 7

    expr  go to state 53


State 35

    9 asStmt: expr ';' .

    $default  reduce using rule 9 (asStmt)


State 36

   30 idlist: ID .

    $default  reduce using rule 30 (idlist)


State 37

    8 VarDeclStmt: KWD $@1 idlist . ';'
   29 idlist: idlist . ',' idlist

    ';'  shift, and go to state 54
    ','  shift, and go to state 55


State 38

   10 chkStmt: CHK checklist ';' .

    $default  reduce using rule 10 (chkStmt)


State 39

   31 checklist: checklist ',' . checklist

    ID  shift, and go to state 14

    checklist  go to state 56


State 40

   25 expr: '(' expr ')' .

    $default  reduce using rule 25 (expr)


State 41

   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr
   15     | expr . AND expr
   15     | expr AND expr .
   16     | expr . OR expr
   17     | expr . LE expr
   18     | expr . '<' expr
   19     | expr . GE expr
   20     | expr . '>' expr
   21     | expr . '=' expr
   22     | expr . EQ expr
   23     | expr . NE expr

    EQ   shift, and go to state 29
    NE   shift, and go to state 30
    '-'  shift, and go to state 31
    '+'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 15 (expr)


State 42

   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr
   15     | expr . AND expr
   16     | expr . OR expr
   16     | expr OR expr .
   17     | expr . LE expr
   18     | expr . '<' expr
   19     | expr . GE expr
   20     | expr . '>' expr
   21     | expr . '=' expr
   22     | expr . EQ expr
   23     | expr . NE expr

    EQ   shift, and go to state 29
    NE   shift, and go to state 30
    '-'  shift, and go to state 31
    '+'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 16 (expr)


State 43

   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr
   15     | expr . AND expr
   16     | expr . OR expr
   17     | expr . LE expr
   17     | expr LE expr .
   18     | expr . '<' expr
   19     | expr . GE expr
   20     | expr . '>' expr
   21     | expr . '=' expr
   22     | expr . EQ expr
   23     | expr . NE expr

    EQ   shift, and go to state 29
    NE   shift, and go to state 30
    '-'  shift, and go to state 31
    '+'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 17 (expr)


State 44

   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr
   15     | expr . AND expr
   16     | expr . OR expr
   17     | expr . LE expr
   18     | expr . '<' expr
   19     | expr . GE expr
   19     | expr GE expr .
   20     | expr . '>' expr
   21     | expr . '=' expr
   22     | expr . EQ expr
   23     | expr . NE expr

    EQ   shift, and go to state 29
    NE   shift, and go to state 30
    '-'  shift, and go to state 31
    '+'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 19 (expr)


State 45

   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr
   15     | expr . AND expr
   16     | expr . OR expr
   17     | expr . LE expr
   18     | expr . '<' expr
   18     | expr '<' expr .
   19     | expr . GE expr
   20     | expr . '>' expr
   21     | expr . '=' expr
   22     | expr . EQ expr
   23     | expr . NE expr

    EQ   shift, and go to state 29
    NE   shift, and go to state 30
    '-'  shift, and go to state 31
    '+'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 18 (expr)


State 46

   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr
   15     | expr . AND expr
   16     | expr . OR expr
   17     | expr . LE expr
   18     | expr . '<' expr
   19     | expr . GE expr
   20     | expr . '>' expr
   20     | expr '>' expr .
   21     | expr . '=' expr
   22     | expr . EQ expr
   23     | expr . NE expr

    EQ   shift, and go to state 29
    NE   shift, and go to state 30
    '-'  shift, and go to state 31
    '+'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 20 (expr)


State 47

   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr
   15     | expr . AND expr
   16     | expr . OR expr
   17     | expr . LE expr
   18     | expr . '<' expr
   19     | expr . GE expr
   20     | expr . '>' expr
   21     | expr . '=' expr
   21     | expr '=' expr .
   22     | expr . EQ expr
   23     | expr . NE expr

    EQ   shift, and go to state 29
    NE   shift, and go to state 30
    '-'  shift, and go to state 31
    '+'  shift, and go to state 32
    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 21 (expr)


State 48

   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr
   15     | expr . AND expr
   16     | expr . OR expr
   17     | expr . LE expr
   18     | expr . '<' expr
   19     | expr . GE expr
   20     | expr . '>' expr
   21     | expr . '=' expr
   22     | expr . EQ expr
   22     | expr EQ expr .
   23     | expr . NE expr

    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 22 (expr)


State 49

   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr
   15     | expr . AND expr
   16     | expr . OR expr
   17     | expr . LE expr
   18     | expr . '<' expr
   19     | expr . GE expr
   20     | expr . '>' expr
   21     | expr . '=' expr
   22     | expr . EQ expr
   23     | expr . NE expr
   23     | expr NE expr .

    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 23 (expr)


State 50

   11 expr: expr . '+' expr
   12     | expr . '-' expr
   12     | expr '-' expr .
   13     | expr . '*' expr
   14     | expr . '/' expr
   15     | expr . AND expr
   16     | expr . OR expr
   17     | expr . LE expr
   18     | expr . '<' expr
   19     | expr . GE expr
   20     | expr . '>' expr
   21     | expr . '=' expr
   22     | expr . EQ expr
   23     | expr . NE expr

    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 12 (expr)


State 51

   11 expr: expr . '+' expr
   11     | expr '+' expr .
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr
   15     | expr . AND expr
   16     | expr . OR expr
   17     | expr . LE expr
   18     | expr . '<' expr
   19     | expr . GE expr
   20     | expr . '>' expr
   21     | expr . '=' expr
   22     | expr . EQ expr
   23     | expr . NE expr

    '*'  shift, and go to state 33
    '/'  shift, and go to state 34

    $default  reduce using rule 11 (expr)


State 52

   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   13     | expr '*' expr .
   14     | expr . '/' expr
   15     | expr . AND expr
   16     | expr . OR expr
   17     | expr . LE expr
   18     | expr . '<' expr
   19     | expr . GE expr
   20     | expr . '>' expr
   21     | expr . '=' expr
   22     | expr . EQ expr
   23     | expr . NE expr

    $default  reduce using rule 13 (expr)


State 53

   11 expr: expr . '+' expr
   12     | expr . '-' expr
   13     | expr . '*' expr
   14     | expr . '/' expr
   14     | expr '/' expr .
   15     | expr . AND expr
   16     | expr . OR expr
   17     | expr . LE expr
   18     | expr . '<' expr
   19     | expr . GE expr
   20     | expr . '>' expr
   21     | expr . '=' expr
   22     | expr . EQ expr
   23     | expr . NE expr

    $default  reduce using rule 14 (expr)


State 54

    8 VarDeclStmt: KWD $@1 idlist ';' .

    $default  reduce using rule 8 (VarDeclStmt)


State 55

   29 idlist: idlist ',' . idlist

    ID  shift, and go to state 36

    idlist  go to state 57


State 56

   31 checklist: checklist . ',' checklist
   31          | checklist ',' checklist .

    ','  shift, and go to state 39

    ','       [reduce using rule 31 (checklist)]
    $default  reduce using rule 31 (checklist)


State 57

   29 idlist: idlist . ',' idlist
   29       | idlist ',' idlist .

    ','  shift, and go to state 55

    ','       [reduce using rule 29 (idlist)]
    $default  reduce using rule 29 (idlist)
